<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemView"
    android:layout_margin="5dp"
    >
   <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImgProd"
                android:layout_width="150dp"
                android:layout_height="150dp" />
       <LinearLayout
           android:layout_width="45dp"
           android:layout_height="match_parent"
           android:background="@color/white"
           android:padding="20dp"
           android:paddingEnd="0dp"
           android:orientation="vertical">
           <TextView
               android:id="@+id/lbProdName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/lbProdDesc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/lbProdPrice"
               android:text="@string/r"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/lbProdSubTotal"
               android:text="@string/sub_total_r"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/lbProdQtd"
               android:text="@string/txtQtd"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />


       </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="20dp"
                android:paddingStart="0dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtProdName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtProdDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtProdPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtProdSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtProdQtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/faRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_remove_24" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/faAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_plus_24"
        />
</androidx.cardview.widget.CardView>